--- a/loadgenerator/Dockerfile
+++ b/loadgenerator/Dockerfile
@@ -1,3 +1,3 @@
 FROM busybox
 ADD generateLoad.sh /tmp/generateLoad.sh
-CMD ["/bin/sh","/tmp/generateLoad.sh"]
+CMD ["/bin/sh","-c","tmp/generateLoad.sh","${cluster}"]
